Updates to build and test with Java 11 and 17